Fixed ID's to be in headers not sections finished

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       src="./assets/avatars/fake_person.jpg"
       alt="Photo of Fake person"
     />
-    <section id="about-me">
-      <h2>About Me</h2>
+    <section>
+      <h2 id="about-me">About Me</h2>
     </section>
     <p class="candidate-bio">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex illo unde
@@ -28,32 +28,28 @@
       odit, impedit ducimus in molestiae ipsam consequuntur repellat esse quae
       quia ab harum commodi facere minus.
     </p>
-    <section id="skills">
-      <h2>My Skills</h2>
+    <section>
+      <h2 id="skills">My Skills</h2>
     </section>
-    <div id="skills-list">
-      <ol>
-        <li>Basketweaver</li>
-        <li>Atmosphere Sniffing Expert</li>
-        <li>Covert Snack Acquisition Operative</li>
-        <li>Elite Powerpoint Ninja</li>
-        <li>Precision Sandwhich Architect</li>
-        <li>Advanced Office Coffee Deployment Technician</li>
-      </ol>
-    </div>
-    <section id="hobbies">
-      <h2>My Hobbies</h2>
+    <ol id="skills-list">
+      <li>Basketweaver</li>
+      <li>Atmosphere Sniffing Expert</li>
+      <li>Covert Snack Acquisition Operative</li>
+      <li>Elite Powerpoint Ninja</li>
+      <li>Precision Sandwhich Architect</li>
+      <li>Advanced Office Coffee Deployment Technician</li>
+    </ol>
+    <section>
+      <h2 id="hobbies">My Hobbies</h2>
     </section>
-    <div id="hobbies-list">
-      <ul>
-        <li>Drinking Coffee</li>
-        <li>Consuming Large amounts of caffeine</li>
-        <li>Competitive Napping</li>
-        <li>Cat Whisperer</li>
-      </ul>
-    </div>
-    <section id="contacts">
-      <h2>Contact Me</h2>
+    <ul id="hobbies-list">
+      <li>Drinking Coffee</li>
+      <li>Consuming Large amounts of caffeine</li>
+      <li>Competitive Napping</li>
+      <li>Cat Whisperer</li>
+    </ul>
+    <section>
+      <h2 id="contacts">Contact Me</h2>
     </section>
     <table class="contacts-table">
       <tr>
